--- a/src/components/albums/Albums.css
+++ b/src/components/albums/Albums.css
@@ -1,15 +1,6 @@
 :local(.albums) {
   display: grid;
-  grid-column-gap: 2rem;
-  grid-row-gap: 2rem;
-  align-content: space-evenly;
-
-  @media (min-width: 650px) {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-  @media (min-width: 1050px) {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-  }
+  grid-gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  margin: 0 2rem;
 }
