--- a/src/components/albums/Albums.css
+++ b/src/components/albums/Albums.css
@@ -2,5 +2,6 @@
   display: grid;
   grid-gap: 2rem;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  margin: 0 2rem;
+  grid-template-rows: repeat(auto-fit, minmax(250px, 1fr));
+  margin: 0 3rem;
 }
