--- a/src/components/thumbnail/Thumbnail.css
+++ b/src/components/thumbnail/Thumbnail.css
@@ -1,27 +1,20 @@
 :local(.thumbnail) {
-  height: 100vw;
-  max-width: 325px;
-  max-height: 325px;
+  height: 100%;
+  max-width: 1fr;
+  max-height: 1fr;
+  min-height: 250px;
   margin: auto;
   color: black;
   font-family: Roboto, Helvetica;
   font-weight: 100;
   font-size: 1em;
   box-shadow: 2px 2px 10px rgba(82, 82, 82, 0.66);
-  
-  img {
-    width: 100%;
-  }
-  
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-position: center; 
+  background-size: cover;
+
   a {
     text-decoration-line: none;
-  }
-
-  @media (min-width: 650px) {
-    height: 50vw;
-  }
-
-  @media (min-width: 1050px) {
-    height: 33vw;
   }
 }
