cleaning up styles

--- a/src/components/albums/Albums.css
+++ b/src/components/albums/Albums.css
@@ -4,6 +4,10 @@
   grid-row-gap: 2rem;
   align-content: space-evenly;
 
+  a {
+    text-decoration: none;
+  }
+
   @media (min-width: 650px) {
     display: grid;
     grid-template-columns: 1fr 1fr;
