--- a/src/components/thumbnail/Thumbnail.css
+++ b/src/components/thumbnail/Thumbnail.css
@@ -1,5 +1,6 @@
 :local(.thumbnail) {
   height: 100vw;
+  width: 100vw;
   max-width: 325px;
   max-height: 325px;
   margin: auto;
@@ -8,20 +9,23 @@
   font-weight: 100;
   font-size: 1em;
   box-shadow: 2px 2px 10px rgba(82, 82, 82, 0.66);
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-position: center; 
+  background-size: cover;
   
-  img {
-    width: 100%;
-  }
-  
-  a {
-    text-decoration-line: none;
+  h2 {
+    text-decoration: none;
+    color: white;
   }
 
   @media (min-width: 650px) {
     height: 50vw;
+    width: 50vw;
   }
 
   @media (min-width: 1050px) {
     height: 33vw;
+    width: 33vw;
   }
 }
