--- a/src/components/thumbnail/Thumbnail.css
+++ b/src/components/thumbnail/Thumbnail.css
@@ -15,6 +15,9 @@
   background-size: cover;
   
   h2 {
+    width: fit-content;
+    margin: .25em .5em;
+    font-size: 3em;
     text-decoration: none;
     color: white;
   }
