--- a/src/components/albums/Albums.css
+++ b/src/components/albums/Albums.css
@@ -3,17 +3,20 @@
   grid-column-gap: 2rem;
   grid-row-gap: 2rem;
   align-content: space-evenly;
+  margin: 0 auto;
 
   a {
     text-decoration: none;
   }
 
-  @media (min-width: 650px) {
+  @media (min-width: 800px) {
+    max-width: 700px;
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
-  @media (min-width: 1050px) {
+  @media (min-width: 1150px) {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    max-width: 1050px;
   }
 }
