--- a/src/components/thumbnail/Thumbnail.css
+++ b/src/components/thumbnail/Thumbnail.css
@@ -20,6 +20,7 @@
     font-size: 3em;
     text-decoration: none;
     color: white;
+    text-shadow: 1.5px 1.5px 5px rgba(82, 82, 82, 0.66);
   }
 
   @media (min-width: 700px) {
